Fix nav link spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -85,7 +85,11 @@ body {
 }
 
 span.navbar-btn {
-  padding: 0 15px;
+  padding: 0 10px;
+}
+
+span.nav-last {
+  padding-right: 15px
 }
 
 .navbar-default {
